# HiasDNS

./: pyproject.toml
hiasdns/: hiasdns.py  testclient.py
