[project]
name = "hiasdns"
version = "0.1.0"
description = ""
authors = [
    {name = "dermatty",email = "stephan@untergrabner.at"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[tool.poetry.scripts]
hiasdns = "hiasdns.hiasdns:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "btec"
url = "http://btec.iv.at:8123"
priority = "supplemental"